--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,5 @@ oauth2==1.5.211
 psycopg2==2.4.6
 python-openid==2.2.5
 wsgiref==0.1.2
--e ./lib
+-e ./lib/python2.7/site-packages/api
+-e ./lib/python2.7/site-packages/content_profiles
