--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,6 @@ httplib2==0.7.7
 oauth2==1.5.211
 psycopg2==2.4.6
 python-openid==2.2.5
--e ./lib/python2.7/site-packages/api
--e ./lib/python2.7/site-packages/content_profiles
 wsgiref==0.1.2
+#-e ./lib/python2.7/site-packages/api
+#-e ./lib/python2.7/site-packages/content_profiles
